# rust_actix_sqlite

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  devices.db  docker-compose.yml
migrations/: 20220422214006_init_db.sql
src/: main.rs
src/api/: device_api.rs  mod.rs
src/models/: device_model.rs  mod.rs
src/test/: device_api_test.rs  mod.rs
src/types/: types.rs
