[package]
name = "device_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv_codegen = "0.15.0"
sqlx = { version = "0.5", features = [ "sqlite", "runtime-async-std-native-tls" ] }
tokio = "0.2.22"